ios 앱 아아콘 및 런치 스크린 변경

--- a/ios/delli/LaunchScreen.storyboard
+++ b/ios/delli/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -13,24 +13,47 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="kmK-Gc-Y7c">
-                                <rect key="frame" x="57" y="344" width="300" height="209"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3kK-84-huC">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="mVU-am-1gi">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.11764705882352941" green="0.56470588235294117" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="mVU-am-1gi" firstAttribute="leading" secondItem="3kK-84-huC" secondAttribute="leading" id="8KK-re-kA2"/>
+                                    <constraint firstAttribute="trailing" secondItem="mVU-am-1gi" secondAttribute="trailing" id="JgY-yX-UPc"/>
+                                    <constraint firstAttribute="bottom" secondItem="mVU-am-1gi" secondAttribute="bottom" id="R8U-3o-Wwq"/>
+                                    <constraint firstItem="mVU-am-1gi" firstAttribute="top" secondItem="3kK-84-huC" secondAttribute="top" id="Yny-8S-uSs"/>
+                                    <constraint firstItem="mVU-am-1gi" firstAttribute="centerX" secondItem="3kK-84-huC" secondAttribute="centerX" id="jhv-iH-g76"/>
+                                    <constraint firstItem="mVU-am-1gi" firstAttribute="centerY" secondItem="3kK-84-huC" secondAttribute="centerY" id="zDp-nq-Yrs"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="3kK-84-huC" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="D6y-pF-tr6"/>
+                            <constraint firstItem="3kK-84-huC" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" id="GTQ-sh-FIK"/>
+                            <constraint firstItem="3kK-84-huC" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="WfB-Fb-b14"/>
+                            <constraint firstItem="3kK-84-huC" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="YO8-Te-9Ri"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="3kK-84-huC" secondAttribute="bottom" id="heb-iy-RiY"/>
+                            <constraint firstItem="3kK-84-huC" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="njb-mF-scO"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="3kK-84-huC" secondAttribute="trailing" id="oEi-9L-rXf"/>
+                            <constraint firstItem="3kK-84-huC" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="vc2-1m-iGo"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="50.724637681159422" y="373.66071428571428"/>
+            <point key="canvasLocation" x="48.75" y="372.88732394366195"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Image" width="300" height="300"/>
+        <image name="Launch" width="430" height="932"/>
     </resources>
 </document>
